Handle bubble title resizing (growth) by reworking title layout

The easiest way to demonstrate the bug is to shrink the browser window
horizontally until the title starts to wrap, then drag it larger again.
Without this patch, the title doesn't unwrap.

I also noticed that one of the labels was jiggling in the collected cookies view during resize; left-aligning the text fixes that.

BUG=598985
TBR=sky@chromium.org

Review URL: https://codereview.chromium.org/1849703004

Cr-Commit-Position: refs/heads/master@{#384722}

Former-commit-id: 63302b696824ab46a212de5bc1a1cf80b678a88a